--- a/index.html
+++ b/index.html
@@ -4,10 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lobster&family=Open+Sans:wght@300&family=Silkscreen&display=swap" rel="stylesheet">
     <script src="css/main.css"></script>
     <script defer src="js/main.js"></script>
 </head>
 <body>
-    
+    <main>
+        <h1>Hang Man</h1>
+        <div><img src="images/1.png"></div>
+        <div id="word">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        </div>
+    </main>
+    <button>Generate</button>
 </body>
 </html>
