--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Open+Sans:wght@300&family=Silkscreen&display=swap" rel="stylesheet">
-    <script src="css/main.css"></script>
+<link rel="stylesheet" type="text/css" href="css/main.css" />
     <script defer src="js/main.js"></script>
 </head>
 <body>
