--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
         <h1>Hang Man</h1>
         <div><img src="images/1.png"></div>
         <div id="word">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
         </div>
     </main>
+    <input type="text" placeholder="Enter you'r letter here.">
     <button>Generate</button>
 </body>
 </html>
