--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div></div>
         </div>
     </main>
-    <input type="text" placeholder="Enter you'r letter here.">
+    <input type="text" maxlength="1" placeholder="?">
     <button>Generate</button>
 </body>
 </html>
