--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
     <main>
         <h1>Hang Man</h1>
         <h2></h2>
-        <div><img src="images/1.png"></div>
+        <div><img src="images/0.png"></div>
         <div id="word">
         </div>
     </main>
     <input type="text" maxlength="1" placeholder="?">
-    <button>Generate</button>
+    <button id="guessselect">guess</button>
+    <button id="wordbuild">Generate</button>
 </body>
 </html>
