--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <main>
         <h1>Hang Man</h1>
         <h2></h2>
-        <div><img src="images/0.png"></div>
+        <div id="wrongletters"></div>
+        <div><img src=""></div>
         <div id="word">
         </div>
     </main>
