--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <main>
-        <h1>Hang Man</h1>
+        <h1>Space Man</h1>
         <h2></h2>
         <div id="wrongletters"></div>
         <div><img src=""></div>
