--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Space Man</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Open+Sans:wght@300&family=Silkscreen&display=swap" rel="stylesheet">
@@ -18,6 +18,7 @@
         <div><img src=""></div>
         <div id="word">
         </div>
+        <button>Play Again</button>
     </main>
 </body>
 </html>
